# flask-security-mwe

./: auth.py  database.py  main.py  pyproject.toml
instance/: test.db
